# data_analysis

./: .gitignore  README.md  finalreport.md  pyproject.toml
reports/: finalreport.md
src/data_analysis/: app.py  app2.py  data.csv  main.py
src/data_analysis/config/: agents.yaml  tasks.yaml
