[project]
name = "data_analysis"
version = "0.1.0"
description = "data-analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chainlit>=2.4.1",
    "crewai-tools>=0.36.0",
    "crewai[tools]>=0.100.1,<1.0.0",
    "matplot>=0.1.9",
]

[project.scripts]
kickoff = "data_analysis.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
